# nephelios

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.MD  docker-compose.yml  help.html  nephelios.yml  prom.yml  prometheus.yml  search-index.js  settings.html  src-files.js
.github/: pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci-build.yml  ci-release.yml  ci.yml
dashboards/: app-dashboard.json
grafana/: grafana.ini
nephelios/: all.html  fn.main.html  fn.pipeline.html  index.html  sidebar-items.js
nephelios/helpers/: index.html
nephelios/metrics/: index.html  sidebar-items.js  struct.CONTAINER_CPU.html  struct.CONTAINER_MEM.html  struct.CONTAINER_NET_IN.html  struct.CONTAINER_NET_OUT.html  struct.REGISTRY.html
nephelios/routes/: fn.create_app_route.html  fn.create_metrics_route.html  fn.get_apps_route.html  fn.handle_create_app.html  fn.handle_get_apps.html  fn.handle_metrics.html  fn.handle_remove_app.html  fn.handle_start_app.html  fn.handle_stop_app.html  fn.health_check_route.html  fn.remove_app_route.html  fn.start_app_route.html  fn.stop_app_route.html  index.html  sidebar-items.js  struct.CustomError.html
nephelios/services/: index.html  sidebar-items.js
search.desc/nephelios/: nephelios-desc-0-.js
src/: DOCKERSWARM_UPDATE.md  docker-compose.yml  main.rs  metrics.rs  routes.rs  traefik.toml
src/helpers/: github_helper.rs
src/nephelios/: main.rs.html  metrics.rs.html  routes.rs.html
tests/: integration_test.rs
(+86 files in other folders)
