[package]
name = "nephelios"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
uuid = { version = "0.8", features = ["v4"] }
dirs = "*"
warp = "*"
serde_json = "*"
reqwest = { version = "0.11", features = ["json"] }
libc = "0.2"

[[bin]]
name = "nephelios"
path = "src/main.rs"
