[package]
name = "nephelios"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
uuid = { version = "0.8", features = ["v4"] }
dirs = "*"
warp = "*"
serde_json = "*"
bollard = "0.12"
futures-util = "0.3"
tokio-util = "0.7"
tar = "0.4"
walkdir = "2.3"
reqwest = { version = "0.11", features = ["json"] }
libc = "0.2"
dotenv = "0.15"
chrono = "0.4"

[[bin]]
name = "nephelios"
path = "src/main.rs"
