[package]
name = "nephelios"
version = "0.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
uuid = { version = "0.8", features = ["v4"] }
dirs = "*"
warp = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
bollard = "0.18.1"
futures-util = "0.3"
tokio-util = "0.7"
tar = "0.4"
walkdir = "2.3"
reqwest = { version = "0.11", features = ["json"] }
libc = "0.2"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.1"
futures = "0.3"
prometheus = "0.13"
lazy_static = "1.4"
regex = "1.10.2"

[[bin]]
name = "nephelios"
path = "src/main.rs"
